# onnx-exporter

./: .gitignore  README.md  pyproject.toml
exporter/: __main__.py  base.py  card.py  registry.py  upload.py
exporter/models/: __init__.py  all_minilm_l12_v2.py  all_minilm_l6_v2.py  all_mpnet_base_v2.py  bart_large_cnn.py  bert_base_ner.py  bge_base_en_v1_5.py  clip_vit_base_patch32.py  coedit_base.py  coedit_large.py  craft_mlt_25k.py  deepseek_r1_qwen_1_5b.py  distilbart_cnn_12_6.py  distilbert_ner.py  distilbert_sst2.py  efficientnet_lite4.py  flan_t5_base.py  flan_t5_large.py  flan_t5_small.py  gemma_2_2b_it.py  gpt2.py  gte_base_en_v1_5.py  ms_marco_minilm.py  opus_mt_en_de.py  opus_mt_en_es.py  opus_mt_en_fr.py  phi_3_5_vision.py  phi_3_mini.py  qwen2_5_1_5b_instruct.py  resnet50_v1_7.py  silero_vad.py  smollm2_1_7b_instruct.py  smollm2_360m_instruct.py  t5_small_awesome_text2sql.py  t5_text2sql_spider.py  tinyllama_1_1b_chat.py  wav2vec2_base_960h.py  whisper_small.py  yolo26n.py  yolov8n.py
validation/: craft_validate.py
