[project]
name = "onnx-exporter"
version = "0.1.0"
description = "Export and mirror ONNX models for the inference4j HuggingFace organization"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.20.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
]

[tool.setuptools.packages.find]
include = ["exporter*"]

[project.optional-dependencies]
export = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.36.0",
    "gdown>=5.0.0",
    "numpy>=1.24.0",
]
